# eat_it

./: .gitignore  pyproject.toml  todo
eat_it/: app.py  controllers.py  repositories.py  views.py
tests/integration/: test_app.py
tests/unit/: test_controllers.py  test_ping.py  test_repositories.py  test_users.py  test_views.py
tests/unit/__pycache__/v/cache/: nodeids
