[tool.poetry]
name = "eat-it"
version = "0.1.0"
description = ""
authors = ["AdamCzyz <u19_adaczy_waw@technischools.com>"]
readme = "README.md"
packages = [{include = "eat_it"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
