[tool.poetry]
name = "eat-it"
version = "0.1.0"
description = ""
authors = ["AdamCzyz <u19_adaczy_waw@technischools.com>"]
readme = "README.md"
packages = [{include = "eat_it"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
